# ins-sup-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test-app.sh  test_anthropic_api.py
.github/workflows/: ci.yml
docs/: AGENTS.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: index.html
src/: __init__.py  config.py
src/agents/: __init__.py  base.py  estimate.py  gap_analysis.py  report.py  review.py  strategist.py  text_frameworks.py  vision.py  vision_aggregator.py  vision_frameworks.py
src/api/: __init__.py  app.py  store.py
src/api/models/: __init__.py  requests.py  responses.py
src/api/routes/: __init__.py  contacts.py  health.py  jobs.py
src/db/: __init__.py  connection.py  models.py
src/db/migrations/: 001_initial.sql
src/db/repositories/: __init__.py  examples.py  jobs.py
src/llm/: __init__.py  client.py
src/orchestrator/: __init__.py  context.py  core.py  review_loop.py
src/prompts/: __init__.py  estimate.py  gap_analysis.py  report.py  review.py  strategist.py  vision.py
src/schemas/: __init__.py  estimate.py  evidence.py  gaps.py  job.py  review.py  supplements.py
src/tools/: __init__.py  code_lookup.py  examples.py  jobnimbus.py  pdf_render.py
src/utils/: __init__.py  pdf.py
tests/: benchmark.py  benchmark_all_frameworks.py  benchmark_cli_dashboard.py  benchmark_dashboard.py  benchmark_web_dashboard.py  conftest.py  llm_responses.py  test_api.py  test_integration.py  test_schemas.py  test_tools.py
tests/fixtures/: sample_estimate.txt
